# link-wire-rs

./: Cargo.toml  LICENSE  PROVENANCE.md  README.md  deny.toml
.github/workflows/: ci.yml  conformance.yml
crates/tactus/: Cargo.toml
crates/tactus-wire/: Cargo.toml
crates/tactus-wire/src/: audio.rs  codec.rs  discovery.rs  lib.rs  sync.rs  types.rs
crates/tactus-wire/tests/: vectors.rs
crates/tactus/examples/: rapid_tempo.rs
crates/tactus/src/: audio.rs  engine.rs  lib.rs  math.rs  net.rs  runtime.rs
crates/tactus/tests/: audio_loopback.rs  conformance_contract.rs  loopback.rs  snapshot.rs
docs/: CLEAN-TEAM.md  REVIEW-2026-07-parity-audio-mesh.md
